# apple_store_telegram_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tgbot_14_06.sql
src/: Makefile  bot.py  config.py  middleware.py  schemas.py  utils.py
src/custom_filters/: admin.py
src/filters/: admin.py
src/handlers/: __init__.py  admin_cmds.py  auxiliary_cmds.py  callback_factories.py  default_cmds.py  items_cmds.py  main_cmds.py  payment_cmds.py  shipping_cmds.py  shopping_cart_cmds.py  shopping_list_cmds.py
src/handlers/categories/: items.py
src/infrastructure/redis/: db.py
src/infrastructure/sql/: config.py  container.py  db.py
src/infrastructure/sql/migrations/: env.py
src/infrastructure/sql/models/: __init__.py  category.py  fund.py  item.py  order.py  shopping_cart.py  shopping_list.py  user.py
src/use_cases/: __init__.py  categories.py  container.py  items.py  orders.py  shopping_cart.py  shopping_list.py  users.py
src/worker/: app.py  celeryconfig.py
