[tool.poetry]
name = "telegram-bot-example-project"
version = "0.1.0"
description = ""
authors = ["Rodion <rodiononon@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {extras = ["dotenv"], version = "^1.10.8"}
aiogram = "3.0.0b7"
alembic = "^1.11.1"
dependency-injector = "^4.41.0"
asyncpg = "^0.27.0"
celery = "^5.3.0"
redis = "^4.5.5"
aioredis = "^2.0.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
